// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CategoryProducts /> renders when loading data 1`] = `
<div
  className="MuiPaper-root-2 MuiPaper-elevation2-6 MuiPaper-rounded-3 MuiCard-root-1"
>
  <div
    className="Component-root-32"
  >
    <h2
      className="MuiTypography-root-35 MuiTypography-title-41 Component-title-34"
    >
      Products
    </h2>
    <div
      className="Component-action-29"
    >
      <button
        className="MuiButtonBase-root-65 MuiIconButton-root-59"
        disabled={false}
        onBlur={[Function]}
        onClick={[MockFunction]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-64"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-67"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <g>
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
              />
            </g>
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-73"
        />
      </button>
    </div>
  </div>
  <table
    className="MuiTable-root-82"
  >
    <thead
      className="MuiTableHead-root-83"
    >
      <tr
        className="MuiTableRow-root-84 MuiTableRow-head-87"
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-head-90 Component-avatarCell-80"
          scope="col"
        />
        <th
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-head-90"
          scope="col"
        >
          Name
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-head-90"
          scope="col"
        >
          Type
        </th>
      </tr>
    </thead>
    <tfoot>
      <tr
        className="MuiTableRow-root-84 MuiTableRow-footer-88"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-footer-92 MuiTablePagination-root-100"
          colSpan={3}
          scope={undefined}
        >
          <div
            className="MuiToolbar-root-106 MuiToolbar-gutters-107 MuiTablePagination-toolbar-105"
          >
            <div
              className="MuiTablePagination-spacer-104"
            />
            <div
              className="MuiTablePaginationActions-root-108"
            >
              <button
                className="MuiButtonBase-root-65 MuiButtonBase-disabled-66 MuiIconButton-root-59 MuiIconButton-disabled-63"
                disabled={true}
                onBlur={[Function]}
                onClick={[MockFunction]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="-1"
                type="button"
              >
                <span
                  className="MuiIconButton-label-64"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-67"
                    color={undefined}
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                    />
                  </svg>
                </span>
              </button>
              <button
                className="MuiButtonBase-root-65 MuiIconButton-root-59"
                disabled={false}
                onBlur={[Function]}
                onClick={[MockFunction]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-64"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-67"
                    color={undefined}
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                    />
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root-73"
                />
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tfoot>
    <tbody
      className="MuiTableBody-root-109"
    >
      <tr
        className="MuiTableRow-root-84"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-body-91 Component-avatarCell-80"
          scope={undefined}
        >
          <div
            className="MuiAvatar-root-110 MuiAvatar-colorDefault-111"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-67"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <g>
                <path
                  d="M19 8l-4 4h3c0 3.31-2.69 6-6 6-1.01 0-1.97-.25-2.8-.7l-1.46 1.46C8.97 19.54 10.43 20 12 20c4.42 0 8-3.58 8-8h3l-4-4zM6 12c0-3.31 2.69-6 6-6 1.01 0 1.97.25 2.8.7l1.46-1.46C15.03 4.46 13.57 4 12 4c-4.42 0-8 3.58-8 8H1l4 4 4-4H6z"
                />
              </g>
            </svg>
          </div>
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-body-91"
          scope={undefined}
        >
          <span
            className="Component-skeleton-113"
            style={undefined}
          >
            ‌
          </span>
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-body-91"
          scope={undefined}
        >
          <span
            className="Component-skeleton-113"
            style={undefined}
          >
            ‌
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<CategoryProducts /> renders with initial data 1`] = `
<div
  className="MuiPaper-root-2 MuiPaper-elevation2-6 MuiPaper-rounded-3 MuiCard-root-1"
>
  <div
    className="Component-root-32"
  >
    <h2
      className="MuiTypography-root-35 MuiTypography-title-41 Component-title-34"
    >
      Products
    </h2>
    <div
      className="Component-action-29"
    >
      <button
        className="MuiButtonBase-root-65 MuiIconButton-root-59"
        disabled={false}
        onBlur={[Function]}
        onClick={[MockFunction]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-64"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-67"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <g>
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
              />
            </g>
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-73"
        />
      </button>
    </div>
  </div>
  <table
    className="MuiTable-root-82"
  >
    <thead
      className="MuiTableHead-root-83"
    >
      <tr
        className="MuiTableRow-root-84 MuiTableRow-head-87"
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-head-90 Component-avatarCell-80"
          scope="col"
        />
        <th
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-head-90"
          scope="col"
        >
          Name
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-head-90"
          scope="col"
        >
          Type
        </th>
      </tr>
    </thead>
    <tfoot>
      <tr
        className="MuiTableRow-root-84 MuiTableRow-footer-88"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-footer-92 MuiTablePagination-root-100"
          colSpan={3}
          scope={undefined}
        >
          <div
            className="MuiToolbar-root-106 MuiToolbar-gutters-107 MuiTablePagination-toolbar-105"
          >
            <div
              className="MuiTablePagination-spacer-104"
            />
            <div
              className="MuiTablePaginationActions-root-108"
            >
              <button
                className="MuiButtonBase-root-65 MuiButtonBase-disabled-66 MuiIconButton-root-59 MuiIconButton-disabled-63"
                disabled={true}
                onBlur={[Function]}
                onClick={[MockFunction]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="-1"
                type="button"
              >
                <span
                  className="MuiIconButton-label-64"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-67"
                    color={undefined}
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                    />
                  </svg>
                </span>
              </button>
              <button
                className="MuiButtonBase-root-65 MuiIconButton-root-59"
                disabled={false}
                onBlur={[Function]}
                onClick={[MockFunction]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-64"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-67"
                    color={undefined}
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                    />
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root-73"
                />
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tfoot>
    <tbody
      className="MuiTableBody-root-109"
    >
      <tr
        className="MuiTableRow-root-84"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-body-91 Component-avatarCell-80"
          scope={undefined}
        >
          <div
            className="MuiAvatar-root-110"
          >
            <img
              alt={undefined}
              className="MuiAvatar-img-112"
              sizes={undefined}
              src="/media/__sized__/products/saleor/static/placeholders/t-shirts/6_tdo7a5D-crop-c0-5__0-5-255x255-70.jpg"
              srcSet={undefined}
            />
          </div>
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-body-91"
          scope={undefined}
        >
          <span
            className=""
            onClick={[Function]}
          >
            Gardner, Graham and King
          </span>
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-body-91"
          scope={undefined}
        >
          T-Shirt
        </td>
      </tr>
      <tr
        className="MuiTableRow-root-84"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-body-91 Component-avatarCell-80"
          scope={undefined}
        >
          <div
            className="MuiAvatar-root-110"
          >
            <img
              alt={undefined}
              className="MuiAvatar-img-112"
              sizes={undefined}
              src="/media/__sized__/products/saleor/static/placeholders/t-shirts/6_tdo7a5D-crop-c0-5__0-5-255x255-70.jpg"
              srcSet={undefined}
            />
          </div>
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-body-91"
          scope={undefined}
        >
          <span
            className=""
            onClick={[Function]}
          >
            Gardner, Graham and King
          </span>
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-body-91"
          scope={undefined}
        >
          T-Shirt
        </td>
      </tr>
      <tr
        className="MuiTableRow-root-84"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-body-91 Component-avatarCell-80"
          scope={undefined}
        >
          <div
            className="MuiAvatar-root-110"
          >
            <img
              alt={undefined}
              className="MuiAvatar-img-112"
              sizes={undefined}
              src="/media/__sized__/products/saleor/static/placeholders/t-shirts/6_tdo7a5D-crop-c0-5__0-5-255x255-70.jpg"
              srcSet={undefined}
            />
          </div>
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-body-91"
          scope={undefined}
        >
          <span
            className=""
            onClick={[Function]}
          >
            Gardner, Graham and King
          </span>
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-body-91"
          scope={undefined}
        >
          T-Shirt
        </td>
      </tr>
      <tr
        className="MuiTableRow-root-84"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-body-91 Component-avatarCell-80"
          scope={undefined}
        >
          <div
            className="MuiAvatar-root-110"
          >
            <img
              alt={undefined}
              className="MuiAvatar-img-112"
              sizes={undefined}
              src="/media/__sized__/products/saleor/static/placeholders/t-shirts/6_tdo7a5D-crop-c0-5__0-5-255x255-70.jpg"
              srcSet={undefined}
            />
          </div>
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-body-91"
          scope={undefined}
        >
          <span
            className=""
            onClick={[Function]}
          >
            Gardner, Graham and King
          </span>
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-body-91"
          scope={undefined}
        >
          T-Shirt
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<CategoryProducts /> renders without initial data 1`] = `
<div
  className="MuiPaper-root-2 MuiPaper-elevation2-6 MuiPaper-rounded-3 MuiCard-root-1"
>
  <div
    className="Component-root-32"
  >
    <h2
      className="MuiTypography-root-35 MuiTypography-title-41 Component-title-34"
    >
      Products
    </h2>
    <div
      className="Component-action-29"
    >
      <button
        className="MuiButtonBase-root-65 MuiIconButton-root-59"
        disabled={false}
        onBlur={[Function]}
        onClick={[MockFunction]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-64"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-67"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <g>
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
              />
            </g>
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-73"
        />
      </button>
    </div>
  </div>
  <table
    className="MuiTable-root-82"
  >
    <thead
      className="MuiTableHead-root-83"
    >
      <tr
        className="MuiTableRow-root-84 MuiTableRow-head-87"
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-head-90 Component-avatarCell-80"
          scope="col"
        />
        <th
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-head-90"
          scope="col"
        >
          Name
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-head-90"
          scope="col"
        >
          Type
        </th>
      </tr>
    </thead>
    <tfoot>
      <tr
        className="MuiTableRow-root-84 MuiTableRow-footer-88"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-footer-92 MuiTablePagination-root-100"
          colSpan={3}
          scope={undefined}
        >
          <div
            className="MuiToolbar-root-106 MuiToolbar-gutters-107 MuiTablePagination-toolbar-105"
          >
            <div
              className="MuiTablePagination-spacer-104"
            />
            <div
              className="MuiTablePaginationActions-root-108"
            >
              <button
                className="MuiButtonBase-root-65 MuiButtonBase-disabled-66 MuiIconButton-root-59 MuiIconButton-disabled-63"
                disabled={true}
                onBlur={[Function]}
                onClick={[MockFunction]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="-1"
                type="button"
              >
                <span
                  className="MuiIconButton-label-64"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-67"
                    color={undefined}
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                    />
                  </svg>
                </span>
              </button>
              <button
                className="MuiButtonBase-root-65 MuiIconButton-root-59"
                disabled={false}
                onBlur={[Function]}
                onClick={[MockFunction]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-64"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-67"
                    color={undefined}
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                    />
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root-73"
                />
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tfoot>
    <tbody
      className="MuiTableBody-root-109"
    >
      <tr
        className="MuiTableRow-root-84"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-body-91 Component-avatarCell-80"
          scope={undefined}
        />
        <td
          aria-sort={null}
          className="MuiTableCell-root-89 MuiTableCell-body-91"
          colSpan={2}
          scope={undefined}
        >
          No products found
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
